Implement more project code endpoint flow is now working with cookie authentication
